--- a/src/app/Hero.css
+++ b/src/app/Hero.css
@@ -5,6 +5,7 @@
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.947)), url("/image1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     overflow: hidden;
 }
 
