--- a/src/app/Hero.css
+++ b/src/app/Hero.css
@@ -40,10 +40,7 @@
     background-position: center;
 }
 
-.shadow-head{
-    text-shadow: 1px 1px 2px #fff,
-                 1px 1px 2px #ff1100;    
-}
+
 
 
 .part-link{
@@ -54,4 +51,8 @@
     border-color: blue;
     border: 2px solid gray;
 
+}
+
+body{
+    background-color: #0d1117;
 }
